Add lookup by purl api endpoint
